<resources>
    <string name="app_name">PDM2Jokenpo</string>
    <string name="txt_pc_choice">Escolha do App</string>
    <string name="txt_user_choice">Escolha uma opção abaixo</string>
    <string name="txt_placar">Placar da Rodada</string>
    <string name="img_choice_app">Imagem da escolha do App</string>
    <string name="img_stone">Imagem pedra</string>
    <string name="img_paper">Imagem papel</string>
    <string name="img_scissors">Imagem tesoura</string>
    <string-array name="resultado">
        <item>"Você perdeu :("</item>
        <item>"Você ganhou :)"</item>
        <item>"Empatamos ;)"</item>
    </string-array>
    <string name="txt_recorte_logo">Recorte do logotipo da empresa</string>
    <string name="txt_nome_app">Pedra, Papel, \nTesoura, já!</string>
    <string name="txt_dica_nome">Digite seu nome...</string>
    <string name="txt_jogar">Agora que vimos como se joga,\nbora jogar?</string>
    <string name="btn_jogar">JOGAR</string>
    <string name="btn_home">TELA INICIAL</string>
    <string name="txt_desc_jogo">Ilustração do jogo Jokenpô</string>
    <string name="txt_resultado_rodada">0</string>
    <string name="btn_retornar">Retornar</string>
    <string name="txt_app">App</string>
    <string name="txt_user">User</string>
    <string name="txt_draw_game">Empatamos. Jogaremos mais uma vez...</string>
    <string name="txt_perdeu">Você perdeu. Que triste, né?!</string>
    <string name="txt_ganhou">Você ganhou. Parabéns!</string>
    <string name="txt_ok">OK</string>
    <string name="txt_autor_video">https://www.youtube.com/watch?v=ZwUIdPm36LA</string>
</resources>