<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/llTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivJokenpo"
            android:layout_width="80dp"
            android:layout_height="107dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.35"
            android:contentDescription="@string/txt_desc_jogo"
            android:foregroundGravity="center_vertical|center_horizontal"
            app:srcCompat="@drawable/jokenpo_um" />

        <TextView
            android:id="@+id/tvNomeApp"
            android:layout_width="125dp"
            android:layout_height="107dp"
            android:layout_weight="1"
            android:contentDescription="@string/txt_nome_app"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:text="@string/txt_nome_app"
            android:textAlignment="center"
            android:textColor="@color/txt_title"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/borda_verde_layout"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitulo">


        <VideoView
            android:id="@+id/vidRegras"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:foreground="@drawable/ppt_video" />

        <LinearLayout
            android:id="@+id/llAutorVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLogoAutorVideo"
                android:layout_width="35dp"
                android:layout_height="17dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/triple_s" />

            <TextView
                android:id="@+id/tvAutorVideo"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:contextClickable="false"
                android:paddingRight="2dp"
                android:text="@string/txt_autor_video"
                android:textAlignment="textEnd"
                android:textColor="@color/lose"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVideoControles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="@android:color/system_on_secondary_fixed_variant"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/play" />

            <ImageView
                android:id="@+id/ivPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="@android:color/system_on_secondary_fixed_variant"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/pause" />

            <ImageView
                android:id="@+id/ivStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="@android:color/system_on_secondary_fixed_variant"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/stop" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvInstrucao"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="35dp"
        android:autoSizeTextType="uniform"
        android:background="#B3E5FC"
        android:contentDescription="@string/txt_jogar"
        android:isScrollContainer="true"
        android:overScrollMode="always"
        android:padding="8dp"
        android:scrollIndicators="right"
        android:text="@string/txt_jogar"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llVideo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/txt_dica_nome"
        android:imeOptions="actionDone"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstrucao">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:hint="@string/txt_dica_nome"
            android:maxLength="17"
            android:singleLine="true"
            android:textColor="@color/material_dynamic_neutral0"
            android:textSize="14sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?android:attr/colorFocusedHighlight"
        android:contentDescription="@string/btn_jogar"
        android:letterSpacing="1"
        android:padding="2dp"
        android:text="@string/btn_jogar"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/transparent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNome" />

</androidx.constraintlayout.widget.ConstraintLayout>